--- a/notebooks/pandas-lab-solutions.ipynb
+++ b/notebooks/pandas-lab-solutions.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-31T19:03:32.613843",
-     "start_time": "2017-01-31T19:03:32.604378"
+     "end_time": "2017-03-03T20:20:32.998050",
+     "start_time": "2017-03-03T20:20:32.086785"
     },
     "collapsed": false
    },
@@ -24,7 +24,7 @@
     "import numpy as np\n",
     "import os\n",
     "\n",
-    "data = pd.read_csv(os.path.join('..', 'data', 'ozone.csv'))"
+    "data = pd.read_csv(os.path.join('data', 'ozone.csv'))"
    ]
   },
   {
@@ -32,8 +32,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-31T18:48:23.276619",
-     "start_time": "2017-01-31T18:48:23.257133"
+     "end_time": "2017-03-03T20:20:33.566301",
+     "start_time": "2017-03-03T20:20:33.549887"
     },
     "collapsed": false
    },
