--- a/notebooks/pandas-lab.ipynb
+++ b/notebooks/pandas-lab.ipynb
@@ -20,7 +20,7 @@
     "import pandas as pd\n",
     "import os\n",
     "\n",
-    "data = pd.read_csv(os.path.join('..', 'data', 'ozone.csv'))"
+    "data = pd.read_csv(os.path.join('data', 'ozone.csv'))"
    ]
   },
   {
@@ -332,6 +332,18 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
